# ThriftPfrSerializer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: pkg-config.pc.in  tpfrserializerConfigVersion.cmake.in
example/: CMakeLists.txt  main.cpp
include/: TModelField.h  TPfrDeSerializer.h  TPfrFieldHandler.h  TPfrFieldHandler.h.autosave  TPfrKeyValueHandler.h  TPfrMacro.h  TPfrSerializer.h  TPfrType.h  TPfrValueEraser.h  datatransportbase.h  universalpipe.h
